cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
project(cpp_concurrency LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
FIND_PACKAGE(PkgConfig REQUIRED)
pkg_check_modules(BLUEZ REQUIRED bluez)

option(ENABLE_ASAN "Enable address sanitizer" false)
option(ENABLE_UBSAN "Enable undefined behavior sanitizer" false)
option(ENABLE_TSAN "Enable thread sanitizer" false)

if(ENABLE_ASAN)
	add_compile_options(-fsanitize=address)
	add_link_options(-fsanitize=address)
endif()
if(ENABLE_LSAN)
	add_compile_options(-fsanitize=leak)
	add_link_options(-fsanitize=leak)
endif()
if(ENABLE_UBSAN)
	add_compile_options(-fsanitize=undefined)
	add_link_options(-fsanitize=undefined)
endif()
if(ENABLE_TSAN)
	add_compile_options(-fsanitize=thread)
	add_link_options(-fsanitize=thread)
endif()

set(Boost_USE_MULTITHREADED false)
find_package(Threads)

# add_library(socket lib/socket.cpp)
# target_include_directories(socket PUBLIC include)

add_executable(test_service_queue test/test_service_queue.cpp)
add_executable(test_server test/test_server.cpp)
add_executable(test_client test/test_client.cpp)
add_executable(test_hci test/test_hci_controller.cpp)
add_executable(test_sdp test/test_sdp_controller.cpp)
add_executable(transf_server test/file_transfer/file_transfer_server.cpp)
add_executable(transf_client test/file_transfer/file_transfer_client.cpp)

target_include_directories(test_service_queue PUBLIC include)
target_include_directories(test_server PUBLIC include ${BLUEZ_INCLUDE_DIRS})
target_include_directories(test_client PUBLIC include ${BLUEZ_INCLUDE_DIRS})
target_include_directories(test_hci PUBLIC include ${BLUEZ_INCLUDE_DIRS})
target_include_directories(test_sdp PUBLIC include ${BLUEZ_INCLUDE_DIRS})
target_include_directories(transf_server PUBLIC include ${BLUEZ_INCLUDE_DIRS})
target_include_directories(transf_client PUBLIC include ${BLUEZ_INCLUDE_DIRS})

target_link_libraries(test_service_queue ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(test_server ${CMAKE_THREAD_LIBS_INIT} ${BLUEZ_LIBRARY_DIRS} -lbluetooth)
target_link_libraries(test_client ${CMAKE_THREAD_LIBS_INIT} ${BLUEZ_LIBRARY_DIRS} -lbluetooth)
target_link_libraries(test_hci ${BLUEZ_LIBRARY_DIRS} -lbluetooth)
target_link_libraries(test_sdp ${BLUEZ_LIBRARY_DIRS} -lbluetooth)
target_link_libraries(transf_server ${CMAKE_THREAD_LIBS_INIT} ${BLUEZ_LIBRARY_DIRS} -lbluetooth)
target_link_libraries(transf_client ${CMAKE_THREAD_LIBS_INIT} ${BLUEZ_LIBRARY_DIRS} -lbluetooth)
