cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
project(cpp_concurrency LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
FIND_PACKAGE(PkgConfig REQUIRED)
pkg_check_modules(BLUEZ REQUIRED bluez)

option(ENABLE_ASAN "Enable address sanitizer" false)
option(ENABLE_UBSAN "Enable undefined behavior sanitizer" false)
option(ENABLE_TSAN "Enable thread sanitizer" false)

if(ENABLE_ASAN)
	add_compile_options(-fsanitize=address)
	add_link_options(-fsanitize=address)
endif()
if(ENABLE_LSAN)
	add_compile_options(-fsanitize=leak)
	add_link_options(-fsanitize=leak)
endif()
if(ENABLE_UBSAN)
	add_compile_options(-fsanitize=undefined)
	add_link_options(-fsanitize=undefined)
endif()
if(ENABLE_TSAN)
	add_compile_options(-fsanitize=thread)
	add_link_options(-fsanitize=thread)
endif()

set(Boost_USE_MULTITHREADED false)
find_package(Threads)

add_library(bluegrass lib/hci_controller.cpp lib/sdp_controller.cpp lib/bluetooth.cpp)
target_include_directories(bluegrass PUBLIC include ${BLUEZ_INCLUDE_DIRS})
target_link_libraries(bluegrass ${BLUEZ_LIBRARY_DIRS} -lbluetooth)

add_executable(service_queue_test test/data_structs/test_service_queue.cpp)
add_executable(basic_server test/client_server/test_server.cpp)
add_executable(basic_client test/client_server/test_client.cpp)
add_executable(hci_test test/data_structs/test_hci_controller.cpp)
add_executable(sdp_register_test test/data_structs/test_sdp_register.cpp)
add_executable(sdp_search_test test/data_structs/test_sdp_search.cpp)
add_executable(transf_server test/file_transfer/file_transfer_server.cpp)
add_executable(transf_client test/file_transfer/file_transfer_client.cpp)
add_executable(meta_router test/router/test_router_meta.cpp)

target_link_libraries(service_queue_test bluegrass ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(basic_server bluegrass ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(basic_client bluegrass ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(hci_test bluegrass)
target_link_libraries(sdp_register_test bluegrass)
target_link_libraries(sdp_search_test bluegrass)
target_link_libraries(transf_server bluegrass ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(transf_client bluegrass ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(meta_router bluegrass ${CMAKE_THREAD_LIBS_INIT})
