cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
project(cpp_concurrency LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
FIND_PACKAGE(PkgConfig REQUIRED)
pkg_check_modules(BLUEZ REQUIRED bluez)

option(DEBUG "Enables debug printing for some classes" false)
option(ENABLE_ASAN "Enable address sanitizer" false)
option(ENABLE_UBSAN "Enable undefined behavior sanitizer" false)
option(ENABLE_TSAN "Enable thread sanitizer" false)

if(DEBUG)
	add_compile_options(-DDEBUG)
endif()
if(ENABLE_ASAN)
	add_compile_options(-fsanitize=address)
	add_link_options(-fsanitize=address)
endif()
if(ENABLE_LSAN)
	add_compile_options(-fsanitize=leak)
	add_link_options(-fsanitize=leak)
endif()
if(ENABLE_UBSAN)
	add_compile_options(-fsanitize=undefined)
	add_link_options(-fsanitize=undefined)
endif()
if(ENABLE_TSAN)
	add_compile_options(-fsanitize=thread)
	add_link_options(-fsanitize=thread)
endif()

set(Boost_USE_MULTITHREADED false)
find_package(Threads)

add_compile_options(-O3 -Wall -Wextra)

add_library(bluegrass lib/bluetooth.cpp lib/hci.cpp lib/sdp.cpp lib/socket.cpp lib/router.cpp)
target_include_directories(bluegrass PUBLIC include ${BLUEZ_INCLUDE_DIRS})
target_link_libraries(bluegrass -lbluetooth ${BLUEZ_LIBRARY_DIRS})

add_executable(service_queue_test test/data_structs/test_service_queue.cpp)
add_executable(basic_server test/client_server/test_server.cpp)
add_executable(basic_client test/client_server/test_client.cpp)
add_executable(hci_test test/data_structs/test_hci.cpp)
add_executable(sdp_register_test test/data_structs/test_sdp_register.cpp)
add_executable(sdp_search_test test/data_structs/test_sdp_search.cpp)
add_executable(transf_server test/file_transfer/file_transfer_server.cpp)
add_executable(transf_client test/file_transfer/file_transfer_client.cpp)
add_executable(router_test test/router/test_router.cpp)
add_executable(router_active test/router/test_router_active.cpp)
add_executable(router_passive test/router/test_router_passive.cpp)

target_link_libraries(service_queue_test bluegrass ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(basic_server bluegrass ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(basic_client bluegrass ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(hci_test bluegrass)
target_link_libraries(sdp_register_test bluegrass)
target_link_libraries(sdp_search_test bluegrass)
target_link_libraries(transf_server bluegrass ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(transf_client bluegrass ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(router_test bluegrass ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(router_active bluegrass ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(router_passive bluegrass ${CMAKE_THREAD_LIBS_INIT})
